--- a/app/Heroes/listado/listado.component.html
+++ b/app/Heroes/listado/listado.component.html
@@ -1,8 +1,10 @@
 <ng-template>
   <div *ngFor="let heroe of heroes">
-    <span>{{ heroe }}</span> <img src="../../../assets/232227.png" (click)="borrarHeroe(heroe)" >
+    <span (click)="guardarHeroe()">{{ heroe }}</span> <img src="../../../assets/232227.png" (click)="borrarHeroe(heroe)" >
   </div>
-  <!--<div *ngIf="heroeBorrado == ''">No se ha borrado ningún héroe</div>-->
+  <div *ngIf="heroeBorrado == ''">No se ha borrado ningún héroe</div>
   <div *ngIf="heroeBorrado != ''">Se ha borrado el heroe {{heroeBorrado}}</div>
+  <div *ngIf="heroeGuardado == ''">No se ha borrado ningún héroe</div>
+  <div *ngIf="heroeGuardado != ''">Heroe seleccionado {{heroeGuardado}}</div>
   <button (click)="borrarPrimerUltimo()">Borrar heroe</button>
 </ng-template>
