--- a/app/dbz/main-page/main-page.component.html
+++ b/app/dbz/main-page/main-page.component.html
@@ -1,14 +1,21 @@
-<ng-container>
-  <div *ngFor="let item of personajes">{{item.getNombre()}} {{item.getPoder()}}</div>
+<ng-container >
+  <div class="list">
+    <div *ngFor="let item of personajes">{{item.getNombre()}} {{item.getPoder()}}</div>
+  </div>
+
 </ng-container>
 
 
 
 <ng-container >
-  <form #form="ngForm" (ngSubmit)="addPersonaje()">
-    <input type="text" name="nombre" [(ngModel)]="nombreNuevoPersonaje" placeholder="Nombre del personaje">
-    <input type="number" name="poder" [(ngModel)]="poderNuevoPersonaje" placeholder="Poder del personaje">
+  <div class="form">
+    <form #form="ngForm" (ngSubmit)="addPersonaje()">
+      <input type="text" name="nombre" [(ngModel)]="nombreNuevoPersonaje" placeholder="Nombre del personaje">
+      <br>
+      <input type="number" name="poder" [(ngModel)]="poderNuevoPersonaje" placeholder="Poder del personaje">
+      <br>
+      <button type="submit" >Guardar Personaje</button>
+    </form>
+  </div>
 
-    <button type="submit" >Guardar Personaje</button>
-  </form>
 </ng-container>
